<resources>
    <string name="app_name">Scrum toolkit</string>
    <string name="timer_title">Stand up</string>
    <string name="estimate_title">Estimation</string>
    <string name="retro_title">Retrospective</string>
    <string name="settings_title">Settings</string>
    <string name="theme_settings">Theme</string>
    <string name="rotate_settings">Screen orientation</string>

    <string name="base_time">Standup base time</string>
    <string name="base_time_value">%s sec</string>
    <string name="attendees">Attendees</string>
    <string name="add_attendee">Add</string>
    <string name="name_placeholder">Name</string>
    <string name="use_attendee_list">Attendee list</string>
    <string name="use_fix_number">Fix team number</string>
    <string name="next_person">Next person</string>
    <string name="finish">Finish</string>
    <string name="start">Start</string>
    <string name="vac_today">Who is here today?</string>
    <string name="other_settings">Other settings</string>
    <string name="no_of_members">Number of team members</string>
    <string name="all_time">Total time</string>
    <string name="average_time">Average time</string>
    <string name="new_record">Horray! New average record!</string>
    <string name="send_to">Send to</string>
    <string name="hint_specify_members">Hint: You can specify team members in the settings</string>
    <string name="hint_fix_who_starts">Hint: To fix who starts in the random order, just select the chip</string>
    <string name="no_constraint">No constraint applied</string>
    <string name="hint_specify_number_or_members">Hint: You can set fixed number or even specify team members in the settings</string>
</resources>
