<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presenter.activity.MainActivity"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/primaryBackgroundColor">

        <TextView
            android:id="@+id/settingsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="8dp"
            android:text="@string/settings_title"
            android:textColor="?attr/textColor"
            android:textSize="34sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/themeSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/theme_settings"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settingsTitle" />

        <RadioGroup
            android:id="@+id/themeRadio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeSettings">

            <RadioButton
                android:id="@+id/radioLightTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="Light"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />

            <RadioButton
                android:id="@+id/radioDarkTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Dark"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />


            <RadioButton
                android:id="@+id/radioOledTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="Black"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />

        </RadioGroup>


        <TextView
            android:id="@+id/dsmSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/timer_title"
            android:textColor="?attr/textColor"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/themeRadio" />

        <TextView
            android:id="@+id/baseTimeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/base_time"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dsmSettings" />

        <TextView
            android:id="@+id/baseTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/base_time_value"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTimeTitle" />

        <SeekBar
            android:id="@+id/baseTimeSeekBar"
            android:layout_width="350dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:max="150"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTimeValue" />

        <TextView
            android:id="@+id/attendeeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="18dp"
            android:text="@string/attendees"
            android:textColor="?attr/textColor"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseTimeSeekBar" />


        <RadioGroup
            android:id="@+id/attendeeSettingsRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/attendeeTitle" >

            <RadioButton
                android:id="@+id/radioFreeAttendeeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:checked="true"
                android:text="No constraint"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />

            <RadioButton
                android:id="@+id/radioFixNumAttendee"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/use_fix_number"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />


            <RadioButton
                android:id="@+id/radioAttendeeList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/use_attendee_list"
                android:textColor="?attr/textColor"
                android:theme="@style/BoxStyle" />

        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setModeButton"
            style="@style/Widget.MaterialComponents.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white"
            android:shadowColor="@android:color/white"
            android:text="@string/add_attendee"
            app:icon="@drawable/ic_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/attendeeSettingsRadio"
            app:layout_constraintTop_toBottomOf="@+id/attendeeTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>